--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -22,7 +22,9 @@
     <TextView
         android:id="@+id/text_view_address"
         android:layout_width="0dp"
+        android:onClick="createMapIntent"
         android:layout_height="30dp"
+        android:clickable="true"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="16dp"
